absolute position implemented and fixed some errors with margin collapsing given absolute positioning

--- a/examples/style.css
+++ b/examples/style.css
@@ -1,4 +1,7 @@
 .p2 {
-  position:relative;
-  right: 10px;
+  position: absolute;
+}
+
+.p1 {
+  position: absolute;
 }
